pw-react/src/css/App.css
@font-face {
  font-family: abril-fatface;
  src: url('./fonts/abril-fatface/AbrilFatface-Regular.ttf');
}

@font-face {
  font-family: source-sans-pro-regular;
  src: url('./fonts/source-sans-pro/SourceSansPro-Regular.ttf');
}

@font-face {
  font-family: source-sans-pro-light;
  src: url('./fonts/source-sans-pro/SourceSansPro-Light.ttf');
}

@font-face {
  font-family: source-sans-pro-black;
  src: url('./fonts/source-sans-pro/SourceSansPro-Black.ttf');
}

button:hover{
  cursor: pointer;
}

#main-page{
  position: absolute;
  left: 0;
  top: 0;
  width: 100vw;
  background-color: #FDFFFF;
  color: #010109;
  font-family: source-sans-pro-regular;
  font-size: 2vh;
  overflow-x: hidden;
}

.debug-section{
  width: 100vw;
}

/* HEADER SECTION */
#header-section{
  height: 10vh;
  display: flex;
  justify-content: center;
  align-items: center;
}

#header-skills-section, #header-name-section{
  width: 49%;
  height: 100%;
  display: flex;
  align-items: center;
  margin-left: 4vw;
  margin-right: 4vw;
}

#header-name-section{
  justify-content: baseline;
  font-size: 3.25vh;
  font-family: abril-fatface;
}

#header-name-section img{
  width: 2vw;
  height: auto;
  margin-right: 0.5vw;
  border-radius: 5vh;
  border: 0.2vh solid #010109;
  box-shadow: rgba(0, 0, 0, 0.4) 0px 1.5px 2px;
}

#header-skills-section{
  justify-content: end;
}

#header-skills-section img{
  margin-left: 0.5vw;
  width: 1.5vw;
  height: auto;
}

/* TOP SECTION */
#top-section{
  height: 50vh;
  overflow: hidden;
  display: flex;
  justify-content: center;
  align-items: center;
}

#top-title-section{
  position: absolute;
  z-index: 999;
  color: #FDFFFF;
  font-family: abril-fatface;
  text-align: center;
}

#top-title-text{
  font-size: 15vh;
}

#top-section img{
  filter: blur(3px) brightness(85%);
}

/* MIDDLE SECTION */
#middle-section{
  height: 20vh;
  display: flex;
  justify-content: center;
  align-items: center;
}

#middle-nav-section{
  width: 100vw;
  height: auto;
  padding: 2vh;
  position: relative;
  z-index: 2;
}


.middle-nav-section img{
  width: 1.5vw;
  height: auto;
  margin-right: 0.5vw;
  filter: invert(24%) sepia(48%) saturate(2736%) hue-rotate(338deg) brightness(93%) contrast(103%);
}

.middle-nav-section button{
  float: left;
  width: 25vw;
  height: 6vh;
  border: 0.25vh solid #BF2626;
  border-radius: 1vh;
  margin-left: -0.4vw;
  margin-right: -0.4vw;
  background-color: #FDFFFF;
  font-size: 2.75vh;
  font-family: source-sans-pro-light;
  display: flex;
  justify-content: center;
  align-items: center;
  box-shadow: rgba(0, 0, 0, 0.35) 0px 2px 3px;
}

/* BOTTOM SECTION */
#bottom-section{
  border-top: 0.15vh solid #010109;
  background-color: #FFF3F3;
  height: auto;
  padding-top: 2vh;
  padding-bottom: 2vh;
}

.bottom-info-block{
  width: 100%;
  height: 25vh;
  display: flex;
  justify-content: center;
  align-items: center;
}

.bottom-info-card{
  width: 73.5vw;
  height: 15vh;
  background-color: #FDFFFF;
  border: 0.15vh solid #010109;
  border-radius: 1vh;
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
}

.bottom-project-card{
  position: relative;
  width: 75vw;
  height: 60vh;
  background-color: #FDFFFF;
  border: 0.25vh solid #010109;
  border-radius: 1vh;
  box-shadow: rgba(0, 0, 0, 0.35) 0px 2px 3px;
}

.project-card-name{
  width: 50%;
  height: 20%;
  background-color: #FDFFFF;
  border: 0.1vh solid #010109;
  border-radius: 1vh;
  box-shadow: rgba(0, 0, 0, 0.35) 0px 2px 3px;
  font-family: abril-fatface;
  font-size: 4vh;
  display: flex;
  align-items: center;
  padding-left: 1.4vw;
  position: absolute;
  z-index: 3;
}

.project-card-software{
  position: absolute;
  z-index: 2;
  width: 50%;
  height: 20%;
  background-color: #FDFFFF;
  border: 0.1vh solid #010109;
  border-radius: 1vh;
  box-shadow: rgba(0, 0, 0, 0.25) 0px 2px 3px;
  font-family: abril-fatface;
  font-size: 4vh;
  display: flex;
  align-items: center;
  justify-content: center;
  padding-left: 1.4vw;
  top: 10vh;
}

.project-card-software img{
  width: 8%;
  height: auto;
  margin-top: 2vh;
  margin-left: 3vw;
  margin-right: 3vw;
}

.project-card-info{
  position: absolute;
  z-index: 1;
  width: 50%;
  height: 66.5%;
  background-color: #FDFFFF;
  border: 0.1vh solid #010109;
  border-radius: 1vh;
  box-shadow: rgba(0, 0, 0, 0.25) 0px 2px 3px;
  font-size: 2vh;
  display: flex;
  align-items: center;
  padding-left: 1.4vw;
  top: 20vh;
}

.project-card-img{
  position: absolute;
  z-index: 1;
  width: 48%;
  height: 75%;
  background-color: #FDFFFF;
  border: 0.1vh solid #010109;
  border-radius: 1vh;
  box-shadow: rgba(0, 0, 0, 0.25) 0px 2px 3px;
  font-family: abril-fatface;
  font-size: 4vh;
  display: flex;
  align-items: center;
  justify-content: center;
  overflow: hidden;
  right: 0;
}

.project-card-img img{
  width: 100%;
  height: auto;
}

.project-card-bttn{
  position: absolute;
  z-index: 0;
  width: 48%;
  height: 22%;
  background-color: #FDFFFF;
  border: 0.1vh solid #010109;
  border-radius: 1vh;
  box-shadow: rgba(0, 0, 0, 0.25) 0px 2px 3px;
  font-family: abril-fatface;
  font-size: 4vh;
  display: flex;
  align-items: center;
  justify-content: center;
  right: 0;
  top: 46vh;
}

.project-card-bttn button{
  width: 95%;
  height: 60%;
  background-color: #FDFFFF;
  border: 0.25vh solid #449341;
  font-family: source-sans-pro-black;
  color: #449341;
  font-size: 3vh;
  border-radius: 1.25vh;
}

.project-card-bttn button:hover{
  background-color: #449341;
  border: 0.25vh solid #449341;
  font-family: source-sans-pro-black;
  color: #FDFFFF;
  font-size: 3vh;
  border-radius: 1.25vh;
  transition: 0.25s ease-in-out;
}

/* FOOTER SECTION */
#footer-section{
  height: 10vh;
  background-color: #010109;
  display: flex;
  justify-content: center;
  align-items: center;
}

#footer-section img{
  width: 2vw;
  height: auto;
  margin-left: 1vw;
  margin-right: 1vw;
  filter: invert(100%) sepia(21%) saturate(1834%) hue-rotate(174deg) brightness(103%) contrast(101%);
}

#footer-icons-filled{
  position: absolute;
  z-index: 5;
}

#footer-icons-filled a{
  opacity: 0%;
}

#footer-icons-filled a:hover{
  opacity: 100%;
  transition: 0.15s ease-in-out;
}

#footer-icons-unfilled img:hover{
  opacity: 0%;
  transition: 0.05s ease-in-out;
}

